@@ -1,3 +1,7 @@
+23 May 2014: Wouter
+	- unbound-host -D enabled dnssec and reads root trust anchor from
+	  the default root key file that was compiled in.
+
 20 May 2014: Wouter
 	- Feature, unblock-lan-zones: yesno that you can use to make unbound
 	  perform 10.0.0.0/8 and other reverse lookups normally, for use if
